Made sington manager optional to support framework usage + direct usage; Allos for use in other project withou breaking out into a core framework to seperate the terminal logic.